--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "date-fns": "^2.13.0",
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-beta.1",
+    "leaflet": "^1.6.0",
     "moment": "^2.25.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
