--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 © 2020 GitHub, Inc.
+.vscode/.ropeproject/config.py
+.vscode/.ropeproject/objectdb
